--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Usman Suleiman Portfolio</title>
+
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body></body>
 </html>
