--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
     <title>Usman Suleiman Portfolio</title>
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body></body>
