--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
     />
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="/"
+        ><img src="images/logo.svg" alt="Home" width="76px" height="20px"
+      /></a>
+      <a href="#menu"
+        ><img src="images/menu-icon.svg" alt="Menu" width="24px" height="24px"
+      /></a>
+    </header>
+  </body>
 </html>
