--- a/index.html
+++ b/index.html
@@ -21,5 +21,56 @@
         ><img src="images/menu-icon.svg" alt="Menu" width="24px" height="24px"
       /></a>
     </header>
+    <article>
+      <h1>I’m Usman, Glad to see you!</h1>
+      <p>
+        I’m a software developer! I can help you build a product feature or
+        website. Look through some of my work and experience! If you like what
+        you see and have a project you need coded, don’t hestiate to contact me.
+      </p>
+    </article>
+    <footer>
+      <h6>LET'S CONNECT</h6>
+      <nav>
+        <ul>
+          <li>
+            <a href="https://twitter.com/usbkay"
+              ><img
+                src="images/twitter.svg"
+                alt="Usman's Twitter"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+              ><img
+                src="images/linkedin-icon.svg"
+                alt="Usman's LinkedIn"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+          <li>
+            <a href="https://medium.com/@usmansbk"
+              ><img
+                src="images/medium-icon.svg"
+                alt="Usman's Medium Blog"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+          <li>
+            <a href="#no-available"
+              ><img
+                src="images/peace-icon.svg"
+                alt="Unrecognized social media"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
