Add headline section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             /></a>
           </li>
           <li>
-            <a href="#no-available"
+            <a href="#not-available"
               ><img
                 src="images/peace-icon.svg"
                 alt="Unrecognized social media"
