Add nav semantic in footer

--- a/index.html
+++ b/index.html
@@ -30,45 +30,47 @@
       </p>
     </article>
     <footer>
-      <h6>LET'S CONNECT</h6>
-      <ul>
-        <li>
-          <a href="https://twitter.com/usbkay"
-            ><img
-              src="images/twitter.svg"
-              alt="Usman's Twitter"
-              width="20px"
-              height="20px"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
-            ><img
-              src="images/linkedin-icon.svg"
-              alt="Usman's LinkedIn"
-              width="20px"
-              height="20px"
-          /></a>
-        </li>
-        <li>
-          <a href="https://medium.com/@usmansbk"
-            ><img
-              src="images/medium-icon.svg"
-              alt="Usman's Medium Blog"
-              width="20px"
-              height="20px"
-          /></a>
-        </li>
-        <li>
-          <a href="#not-available"
-            ><img
-              src="images/peace-icon.svg"
-              alt="Unrecognized social media"
-              width="20px"
-              height="20px"
-          /></a>
-        </li>
-      </ul>
+      <nav>
+        <h6>LET'S CONNECT</h6>
+        <ul>
+          <li>
+            <a href="https://twitter.com/usbkay"
+              ><img
+                src="images/twitter.svg"
+                alt="Usman's Twitter"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+              ><img
+                src="images/linkedin-icon.svg"
+                alt="Usman's LinkedIn"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+          <li>
+            <a href="https://medium.com/@usmansbk"
+              ><img
+                src="images/medium-icon.svg"
+                alt="Usman's Medium Blog"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+          <li>
+            <a href="#not-available"
+              ><img
+                src="images/peace-icon.svg"
+                alt="Unrecognized social media"
+                width="20px"
+                height="20px"
+            /></a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
