Fix img dimension attributes value

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <header>
       <a href="/"
-        ><img src="images/logo.svg" alt="Home" width="76px" height="20px"
+        ><img src="images/logo.svg" alt="Home" width="76" height="20"
       /></a>
       <a href="#menu"
-        ><img src="images/menu-icon.svg" alt="Menu" width="24px" height="24px"
+        ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
       /></a>
     </header>
     <article>
@@ -38,8 +38,8 @@
               ><img
                 src="images/twitter.svg"
                 alt="Usman's Twitter"
-                width="20px"
-                height="20px"
+                width="20"
+                height="20"
             /></a>
           </li>
           <li>
@@ -47,8 +47,8 @@
               ><img
                 src="images/linkedin-icon.svg"
                 alt="Usman's LinkedIn"
-                width="20px"
-                height="20px"
+                width="20"
+                height="20"
             /></a>
           </li>
           <li>
@@ -56,8 +56,8 @@
               ><img
                 src="images/medium-icon.svg"
                 alt="Usman's Medium Blog"
-                width="20px"
-                height="20px"
+                width="20"
+                height="20"
             /></a>
           </li>
           <li>
@@ -65,8 +65,8 @@
               ><img
                 src="images/peace-icon.svg"
                 alt="Unrecognized social media"
-                width="20px"
-                height="20px"
+                width="20"
+                height="20"
             /></a>
           </li>
         </ul>
