Rename AngelList icon

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <li>
             <a href="#not-available"
               ><img
-                src="images/peace-icon.svg"
-                alt="Unrecognized social media"
+                src="images/angel-list-icon.svg"
+                alt="Angel List"
                 width="20"
                 height="20"
             /></a>
