Fix angellist link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             /></a>
           </li>
           <li>
-            <a href="#not-available"
+            <a href="https://angel.co/"
               ><img
                 src="images/angel-list-icon.svg"
                 alt="Angel List"
