Style section heading

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins:bold&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
   </head>
