--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Poppins:bold&display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins:regular,bold,500&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -22,8 +22,8 @@
       /></a>
     </header>
     <article>
-      <h1>I’m Usman, Glad to see you!</h1>
-      <p>
+      <h1 class="header-2 n800">I’m Usman, Glad to see you!</h1>
+      <p class="body-2 n600">
         I’m a software developer! I can help you build a product feature or
         website. Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
@@ -31,7 +31,7 @@
     </article>
     <footer>
       <section>
-        <h6>LET'S CONNECT</h6>
+        <h6 class="body-2 bolder b300">LET'S CONNECT</h6>
         <ul>
           <li>
             <a href="https://twitter.com/usbkay"
