--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header>
-      <a href="/"
+    <header class="app-bar">
+      <a href="/" class="logo"
         ><img src="images/logo.svg" alt="Home" width="76" height="20"
       /></a>
-      <a href="#menu"
+      <a href="#menu" class="tertiary-btn"
         ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
       /></a>
     </header>
