--- a/index.html
+++ b/index.html
@@ -21,56 +21,56 @@
         ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
       /></a>
     </header>
-    <article>
-      <h1 class="header-2 n800">I’m Usman, Glad to see you!</h1>
-      <p class="body-2 n600">
+    <article class="headline">
+      <h1 class="header-2 n800 mb-12">I’m Usman, Glad to see you!</h1>
+      <p class="body-2 n600 mb-12">
         I’m a software developer! I can help you build a product feature or
         website. Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
+      <footer>
+        <section>
+          <h6 class="body-2 bolder b300 mb-12">LET'S CONNECT</h6>
+          <ul>
+            <li>
+              <a href="https://twitter.com/usbkay"
+                ><img
+                  src="images/twitter.svg"
+                  alt="Usman's Twitter"
+                  width="20"
+                  height="20"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+                ><img
+                  src="images/linkedin-icon.svg"
+                  alt="Usman's LinkedIn"
+                  width="20"
+                  height="20"
+              /></a>
+            </li>
+            <li>
+              <a href="https://medium.com/@usmansbk"
+                ><img
+                  src="images/medium-icon.svg"
+                  alt="Usman's Medium Blog"
+                  width="20"
+                  height="20"
+              /></a>
+            </li>
+            <li>
+              <a href="https://angel.co/"
+                ><img
+                  src="images/angel-list-icon.svg"
+                  alt="Angel List"
+                  width="20"
+                  height="20"
+              /></a>
+            </li>
+          </ul>
+        </section>
+      </footer>
     </article>
-    <footer>
-      <section>
-        <h6 class="body-2 bolder b300">LET'S CONNECT</h6>
-        <ul>
-          <li>
-            <a href="https://twitter.com/usbkay"
-              ><img
-                src="images/twitter.svg"
-                alt="Usman's Twitter"
-                width="20"
-                height="20"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
-              ><img
-                src="images/linkedin-icon.svg"
-                alt="Usman's LinkedIn"
-                width="20"
-                height="20"
-            /></a>
-          </li>
-          <li>
-            <a href="https://medium.com/@usmansbk"
-              ><img
-                src="images/medium-icon.svg"
-                alt="Usman's Medium Blog"
-                width="20"
-                height="20"
-            /></a>
-          </li>
-          <li>
-            <a href="https://angel.co/"
-              ><img
-                src="images/angel-list-icon.svg"
-                alt="Angel List"
-                width="20"
-                height="20"
-            /></a>
-          </li>
-        </ul>
-      </section>
-    </footer>
   </body>
 </html>
