Style headline section

--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
       <footer>
         <section>
           <h6 class="body-2 bolder b300 mb-12">LET'S CONNECT</h6>
-          <ul>
+          <ul class="social-media-icons">
             <li>
               <a href="https://twitter.com/usbkay"
                 ><img
                   src="images/twitter.svg"
                   alt="Usman's Twitter"
-                  width="20"
-                  height="20"
+                  class="social-icon"
               /></a>
             </li>
             <li>
@@ -46,8 +45,7 @@
                 ><img
                   src="images/linkedin-icon.svg"
                   alt="Usman's LinkedIn"
-                  width="20"
-                  height="20"
+                  class="social-icon"
               /></a>
             </li>
             <li>
@@ -55,8 +53,7 @@
                 ><img
                   src="images/medium-icon.svg"
                   alt="Usman's Medium Blog"
-                  width="20"
-                  height="20"
+                  class="social-icon"
               /></a>
             </li>
             <li>
@@ -64,8 +61,7 @@
                 ><img
                   src="images/angel-list-icon.svg"
                   alt="Angel List"
-                  width="20"
-                  height="20"
+                  class="social-icon"
               /></a>
             </li>
           </ul>
