--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       /></a>
     </header>
     <article class="headline">
-      <h1 class="header-2 n800 mb-12">I’m Usman, Glad to see you!</h1>
-      <p class="body-2 n600 mb-12">
+      <h1 class="header-2 color-n800 mb-12">I’m Usman, Glad to see you!</h1>
+      <p class="body-2 color-n600 mb-12">
         I’m a software developer! I can help you build a product feature or
         website. Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
       <footer>
         <section>
-          <h6 class="body-2 bolder b300 mb-12">LET'S CONNECT</h6>
+          <h6 class="body-2 bolder color-b300 mb-12">LET'S CONNECT</h6>
           <ul class="social-media-icons">
             <li>
               <a href="https://twitter.com/usbkay"
