Update AngelList link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://angel.co/"
+              <a href="https://angel.co/u/usman-suleiman-1"
                 ><img
                   src="images/angel-list-icon.svg"
                   alt="Angel List"
