--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="/" class="logo"
         ><img src="images/logo.svg" alt="Home" width="76" height="20"
       /></a>
-      <a href="#menu" class="tertiary-btn"
+      <a href="#menu" class="tertiary-button"
         ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
       /></a>
     </header>
