--- a/index.html
+++ b/index.html
@@ -21,54 +21,50 @@
         ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
       /></a>
     </header>
-    <article class="headline">
+    <section class="headline">
       <h1 class="header-2 color-n800 mb-12">I’m Usman, Glad to see you!</h1>
       <p class="body-2 color-n600 mb-12 drop-shadow">
         I’m a software developer! I can help you build a product feature or
         website. Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <footer>
-        <section>
-          <h6 class="body-2 bolder color-b300 mb-12 drop-shadow">
-            LET'S CONNECT
-          </h6>
-          <ul class="social-media-icons">
-            <li>
-              <a href="https://twitter.com/usbkay"
-                ><img
-                  src="images/twitter.svg"
-                  alt="Usman's Twitter"
-                  class="social-icon"
-              /></a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
-                ><img
-                  src="images/linkedin-icon.svg"
-                  alt="Usman's LinkedIn"
-                  class="social-icon"
-              /></a>
-            </li>
-            <li>
-              <a href="https://medium.com/@usmansbk"
-                ><img
-                  src="images/medium-icon.svg"
-                  alt="Usman's Medium Blog"
-                  class="social-icon"
-              /></a>
-            </li>
-            <li>
-              <a href="https://angel.co/u/usman-suleiman-1"
-                ><img
-                  src="images/angel-list-icon.svg"
-                  alt="Angel List"
-                  class="social-icon"
-              /></a>
-            </li>
-          </ul>
-        </section>
-      </footer>
-    </article>
+      <a href="#connect" class="body-2 bolder color-b300 mb-12 drop-shadow">
+        LET'S CONNECT
+      </a>
+      <ul class="social-media-icons">
+        <li>
+          <a href="https://twitter.com/usbkay"
+            ><img
+              src="images/twitter.svg"
+              alt="Usman's Twitter"
+              class="social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
+            ><img
+              src="images/linkedin-icon.svg"
+              alt="Usman's LinkedIn"
+              class="social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://medium.com/@usmansbk"
+            ><img
+              src="images/medium-icon.svg"
+              alt="Usman's Medium Blog"
+              class="social-icon"
+          /></a>
+        </li>
+        <li>
+          <a href="https://angel.co/u/usman-suleiman-1"
+            ><img
+              src="images/angel-list-icon.svg"
+              alt="Angel List"
+              class="social-icon"
+          /></a>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
