--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         website. Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <a href="#connect" class="body-2 bolder color-b300 mb-12 drop-shadow">
+      <a
+        href="#connect"
+        class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
+      >
         LET'S CONNECT
       </a>
       <ul class="social-media-icons">
