Make menu button a child of nav element

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
       <a href="/" class="logo"
         ><img src="images/logo.svg" alt="Home" width="76" height="20"
       /></a>
-      <a href="#menu" class="tertiary-button"
-        ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
-      /></a>
+      <nav>
+        <a href="#menu" class="tertiary-button"
+          ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
+        /></a>
+      </nav>
     </header>
     <section class="headline">
       <h1 class="header-2 color-n800 mb-12">I’m Usman, Glad to see you!</h1>
