Change image folder structure

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       /></a>
       <nav>
         <a href="#menu" class="tertiary-button"
-          ><img src="images/menu-icon.svg" alt="Menu" width="24" height="24"
+          ><img src="images/icons/menu.svg" alt="Menu" width="24" height="24"
         /></a>
       </nav>
     </header>
@@ -40,7 +40,7 @@
         <li>
           <a href="https://twitter.com/usbkay"
             ><img
-              src="images/twitter.svg"
+              src="images/icons/twitter.svg"
               alt="Usman's Twitter"
               class="social-icon"
           /></a>
@@ -48,7 +48,7 @@
         <li>
           <a href="https://www.linkedin.com/in/usman-suleiman-82b444140/"
             ><img
-              src="images/linkedin-icon.svg"
+              src="images/icons/linkedin.svg"
               alt="Usman's LinkedIn"
               class="social-icon"
           /></a>
@@ -56,7 +56,7 @@
         <li>
           <a href="https://medium.com/@usmansbk"
             ><img
-              src="images/medium-icon.svg"
+              src="images/icons/medium.svg"
               alt="Usman's Medium Blog"
               class="social-icon"
           /></a>
@@ -64,12 +64,22 @@
         <li>
           <a href="https://angel.co/u/usman-suleiman-1"
             ><img
-              src="images/angel-list-icon.svg"
+              src="images/icons/angel-list.svg"
               alt="Angel List"
               class="social-icon"
           /></a>
         </li>
       </ul>
+    </section>
+    <section class="works">
+      <article>
+        <h2>Tonic</h2>
+        <ul>
+          <li>CANOPY</li>
+          <li>Back End Dev</li>
+          <li>2015</li>
+        </ul>
+      </article>
     </section>
   </body>
 </html>
