Add project semantics

--- a/index.html
+++ b/index.html
@@ -72,13 +72,28 @@
       </ul>
     </section>
     <section class="works">
-      <article>
-        <h2>Tonic</h2>
-        <ul>
-          <li>CANOPY</li>
-          <li>Back End Dev</li>
-          <li>2015</li>
+      <article class="project">
+        <img
+          src="images/snapshots/1.svg"
+          alt="Tonic Snapshot"
+          class="snapshot"
+        />
+        <h2 class="header-3 color-n800">Tonic</h2>
+        <ul class="frame-2">
+          <li class="caption bolder-2 color-n600">CANOPY</li>
+          <li class="caption bolder-2 color-n100">Back End Dev</li>
+          <li class="caption bolder-2 color-n100">2015</li>
         </ul>
+        <p class="body-3 color-n600">
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="tags">
+          <li class="tag">html</li>
+          <li class="tag">css</li>
+          <li class="tag">javaScript</li>
+        </ul>
+        <a href="#project-id" class="button">See Project</a>
       </article>
     </section>
   </body>
