--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </ul>
     </section>
     <section class="works">
-      <article class="project">
+      <article class="card p-16">
         <img
           src="images/snapshots/1.svg"
           alt="Tonic Snapshot"
@@ -81,7 +81,13 @@
         <h2 class="header-3 color-n800">Tonic</h2>
         <ul class="frame-2">
           <li class="caption bolder-2 color-n600">CANOPY</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
           <li class="caption bolder-2 color-n100">Back End Dev</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
           <li class="caption bolder-2 color-n100">2015</li>
         </ul>
         <p class="body-3 color-n600">
