--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img
           src="images/snapshots/1.svg"
           alt="Tonic Snapshot"
-          class="snapshot"
+          class="snapshot mb-12"
         />
         <h2 class="header-3 color-n800">Tonic</h2>
         <ul class="frame-2">
@@ -90,7 +90,7 @@
           </li>
           <li class="caption bolder-2 color-n100">2015</li>
         </ul>
-        <p class="body-3 color-n600">
+        <p class="body-3 color-n600 mb-12">
           A daily selection of privately personalized reads; no accounts or
           sign-ups required.
         </p>
