Implement button interactions

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <a href="#project-id" class="button">See Project</a>
+        <button class="button">See Project</a>
       </article>
     </section>
   </body>
