--- a/index.html
+++ b/index.html
@@ -74,14 +74,101 @@
         </ul>
       </section>
     </div>
-    <section class="works">
-      <article class="card p-16">
+    <section class="works grid-container">
+      <article class="card p-16 grid-item">
         <img
           src="images/snapshots/1.svg"
           alt="Tonic Snapshot"
           class="snapshot mb-12"
         />
         <h2 class="header-3 color-n800">Tonic</h2>
+        <ul class="frame-2">
+          <li class="caption bolder-2 color-n600">CANOPY</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
+          <li class="caption bolder-2 color-n100">Back End Dev</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
+          <li class="caption bolder-2 color-n100">2015</li>
+        </ul>
+        <p class="body-3 color-n600 mb-12">
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="tags">
+          <li class="tag mr-8"><span class="small color-b400">html</span></li>
+          <li class="tag mr-8"><span class="small color-b400">css</span></li>
+          <li class="tag"><span class="small color-b400">JavaScript</span></li>
+        </ul>
+        <button class="button">See Project</a>
+      </article>
+      <article class="card p-16 grid-item">
+        <img
+          src="images/snapshots/2.svg"
+          alt="Tonic Snapshot"
+          class="snapshot mb-12"
+        />
+        <h2 class="header-3 color-n800">Multi-Post Stories</h2>
+        <ul class="frame-2">
+          <li class="caption bolder-2 color-n600">CANOPY</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
+          <li class="caption bolder-2 color-n100">Back End Dev</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
+          <li class="caption bolder-2 color-n100">2015</li>
+        </ul>
+        <p class="body-3 color-n600 mb-12">
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="tags">
+          <li class="tag mr-8"><span class="small color-b400">html</span></li>
+          <li class="tag mr-8"><span class="small color-b400">css</span></li>
+          <li class="tag"><span class="small color-b400">JavaScript</span></li>
+        </ul>
+        <button class="button">See Project</a>
+      </article>
+      <article class="card p-16 grid-item">
+        <img
+          src="images/snapshots/3.svg"
+          alt="Tonic Snapshot"
+          class="snapshot mb-12"
+        />
+        <h2 class="header-3 color-n800">Tonic</h2>
+        <ul class="frame-2">
+          <li class="caption bolder-2 color-n600">CANOPY</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
+          <li class="caption bolder-2 color-n100">Back End Dev</li>
+          <li>
+            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          </li>
+          <li class="caption bolder-2 color-n100">2015</li>
+        </ul>
+        <p class="body-3 color-n600 mb-12">
+          A daily selection of privately personalized reads; no accounts or
+          sign-ups required.
+        </p>
+        <ul class="tags">
+          <li class="tag mr-8"><span class="small color-b400">html</span></li>
+          <li class="tag mr-8"><span class="small color-b400">css</span></li>
+          <li class="tag"><span class="small color-b400">JavaScript</span></li>
+        </ul>
+        <button class="button">See Project</a>
+      </article>
+      <article class="card p-16 grid-item">
+        <img
+          src="images/snapshots/4.svg"
+          alt="Tonic Snapshot"
+          class="snapshot mb-12"
+        />
+        <h2 class="header-3 color-n800">Multi-Post Stories</h2>
         <ul class="frame-2">
           <li class="caption bolder-2 color-n600">CANOPY</li>
           <li>
