Fix linter errors

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button class="button">See Project</a>
+        <button type="button" class="button">See Project</button>
       </article>
       <article class="card p-16 grid-item">
         <img
@@ -131,7 +131,7 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button class="button">See Project</a>
+        <button type="button" class="button">See Project</button>
       </article>
       <article class="card p-16 grid-item">
         <img
@@ -160,9 +160,9 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button class="button">See Project</a>
+        <button type="button" class="button">See Project</button>
       </article>
-      <article class="card p-16 grid-item">
+      < class="card p-16 grid-item">
         <img
           src="images/snapshots/4.svg"
           alt="Tonic Snapshot"
@@ -189,7 +189,7 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button class="button">See Project</a>
+        <button type="button" class="button">See Project</button>
       </article>
     </section>
   </body>
