Fix linter errors

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </ul>
       </section>
     </div>
-    <section class="works grid-container">
+    <div class="works grid-container">
       <article class="card p-16 grid-item">
         <img
           src="images/snapshots/1.svg"
@@ -162,7 +162,7 @@
         </ul>
         <button type="button" class="button">See Project</button>
       </article>
-      < class="card p-16 grid-item">
+      <article class="card p-16 grid-item">
         <img
           src="images/snapshots/4.svg"
           alt="Tonic Snapshot"
@@ -191,6 +191,6 @@
         </ul>
         <button type="button" class="button">See Project</button>
       </article>
-    </section>
+    </div>
   </body>
 </html>
