Fix minor styles

--- a/index.html
+++ b/index.html
@@ -193,16 +193,13 @@
       </article>
     </div>
     <section class="about">
-      <h2 class="header-2 mb-12">About Myself</h2>
+      <h2 class="header-2 color-n800 mb-12">About Myself</h2>
       <p class="body-2 color-n600 mb-12">
         Hello I’m a software developer! I can help you build a product , feature
         or website Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <a
-        href="#connect"
-        class="link-button body-2 bolder color-b300 mb-12 drop-shadow"
-      >
+      <a href="#connect" class="link-button body-2 bolder color-b300 mb-12">
         LET'S CONNECT
       </a>
       <ul class="social-media-icons mb-12">
