--- a/index.html
+++ b/index.html
@@ -237,6 +237,23 @@
         </li>
       </ul>
       <button type="button" class="button">Get my resume</button>
+      <ul>
+        <li>
+          <ul>
+            <h6 class="body-1 bolder">Languages</h6>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <h6 class="body-1 bolder">Frameworks</h6>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <h6 class="body-1 bolder">Skills</h6>
+          </ul>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
