Style skill list

--- a/index.html
+++ b/index.html
@@ -237,22 +237,33 @@
         </li>
       </ul>
       <button type="button" class="button">Get my resume</button>
-      <ul>
+      <ul class="skill-list">
         <li>
           <ul>
-            <h6 class="body-1 bolder">Languages</h6>
+            <div class="list-header">
+              <h6 class="body-1 bolder">Languages</h6>
+            </div>
+            <li><span class="body-3 bolder color-n700">JavaScript</span></li>
+            <li><span class="body-3 bolder color-n700">HTML</span></li>
+            <li><span class="body-3 bolder color-n700">CSS</span></li>
           </ul>
         </li>
         <li>
           <ul>
-            <h6 class="body-1 bolder">Frameworks</h6>
+            <div class="list-header">
+              <h6 class="body-1 bolder">Frameworks</h6>
+            </div>
           </ul>
         </li>
+        <div class="separator" />
         <li>
           <ul>
-            <h6 class="body-1 bolder">Skills</h6>
+            <div class="list-header">
+              <h6 class="body-1 bolder">Skills</h6>
+            </div>
           </ul>
         </li>
+        <div class="separator" />
       </ul>
     </section>
   </body>
