Add language icons

--- a/index.html
+++ b/index.html
@@ -243,9 +243,18 @@
             <h6 class="body-1 bolder">Languages</h6>
           </div>
           <ul>
-            <li><span class="body-3 bolder color-n700">JavaScript</span></li>
-            <li><span class="body-3 bolder color-n700">HTML</span></li>
-            <li><span class="body-3 bolder color-n700">CSS</span></li>
+            <li class="skill-item">
+              <img src="images/icons/js.svg" alt="JavaScript" />
+              <span class="body-3 bolder color-n700">JavaScript</span>
+            </li>
+            <li class="skill-item">
+              <img src="images/icons/html5.svg" alt="HTML5" />
+              <span class="body-3 bolder color-n700">HTML</span>
+            </li>
+            <li class="skill-item">
+              <img src="images/icons/css.svg" alt="CSS" />
+              <span class="body-3 bolder color-n700">CSS</span>
+            </li>
           </ul>
         </li>
         <li>
