Style language list

--- a/index.html
+++ b/index.html
@@ -242,18 +242,18 @@
           <div class="list-header">
             <h6 class="body-1 bolder">Languages</h6>
           </div>
-          <ul>
+          <ul class="p-12">
             <li class="skill-item">
               <img src="images/icons/js.svg" alt="JavaScript" />
-              <span class="body-3 bolder color-n700">JavaScript</span>
+              <span class="body-3 bolder color-n700 p-16">JavaScript</span>
             </li>
             <li class="skill-item">
               <img src="images/icons/html5.svg" alt="HTML5" />
-              <span class="body-3 bolder color-n700">HTML</span>
+              <span class="body-3 bolder color-n700 p-16">HTML</span>
             </li>
             <li class="skill-item">
               <img src="images/icons/css.svg" alt="CSS" />
-              <span class="body-3 bolder color-n700">CSS</span>
+              <span class="body-3 bolder color-n700 p-16">CSS</span>
             </li>
           </ul>
         </li>
