Add arrow icons

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
         <li>
           <div class="list-header">
             <h6 class="body-1 bolder">Languages</h6>
+            <img src="images/icons/chevron-down.svg" alt="Close" />
           </div>
           <ul class="p-12">
             <li class="skill-item">
@@ -260,11 +261,13 @@
         <li>
           <div class="list-header">
             <h6 class="body-1 bolder">Frameworks</h6>
+            <img src="images/icons/chevron-right.svg" alt="Expand" />
           </div>
         </li>
         <li>
           <div class="list-header">
             <h6 class="body-1 bolder">Skills</h6>
+            <img src="images/icons/chevron-right.svg" alt="Expand" />
           </div>
         </li>
       </ul>
