Fix skill header color

--- a/index.html
+++ b/index.html
@@ -239,10 +239,17 @@
       <button type="button" class="button">Get my resume</button>
       <ul class="skill-list">
         <li>
-          <div class="list-header">
-            <h6 class="body-1 bolder">Languages</h6>
-            <img src="images/icons/chevron-down.svg" alt="Close" />
-          </div>
+          <a
+            href="#languages"
+            class="list-header link-button color-black flex-text"
+          >
+            <h6 class="body-1 bolder flex-text">Languages</h6>
+            <img
+              src="images/icons/chevron-down.svg"
+              alt="Close"
+              class="mx-12"
+            />
+          </a>
           <ul class="p-12">
             <li class="skill-item">
               <img src="images/icons/js.svg" alt="JavaScript" />
@@ -259,16 +266,22 @@
           </ul>
         </li>
         <li>
-          <div class="list-header">
-            <h6 class="body-1 bolder">Frameworks</h6>
+          <a
+            href="#frameworks"
+            class="list-header link-button color-black flex-text"
+          >
+            <h6 class="body-1 bolder flex-text">Frameworks</h6>
             <img src="images/icons/chevron-right.svg" alt="Expand" />
-          </div>
+          </a>
         </li>
         <li>
-          <div class="list-header">
-            <h6 class="body-1 bolder">Skills</h6>
+          <a
+            href="#skills"
+            class="list-header link-button color-black flex-text"
+          >
+            <h6 class="body-1 bolder flex-text">Skills</h6>
             <img src="images/icons/chevron-right.svg" alt="Expand" />
-          </div>
+          </a>
         </li>
       </ul>
     </section>
