Fix icon styling

--- a/index.html
+++ b/index.html
@@ -244,11 +244,7 @@
             class="list-header link-button color-black flex-text"
           >
             <h6 class="body-1 bolder flex-text">Languages</h6>
-            <img
-              src="images/icons/chevron-down.svg"
-              alt="Close"
-              class="mx-12"
-            />
+            <img src="images/icons/chevron-down.svg" alt="Close" />
           </a>
           <ul class="p-12">
             <li class="skill-item">
