Add action button container

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button type="button" class="button">See Project</button>
+        <div class="action">
+          <button type="button" class="button">See Project</button>
+        </div>
       </article>
       <article class="card p-16 grid-item">
         <img
@@ -128,7 +130,9 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button type="button" class="button">See Project</button>
+        <div class="action">
+          <button type="button" class="button">See Project</button>
+        </div>
       </article>
       <article class="card p-16 grid-item">
         <img
@@ -157,7 +161,9 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button type="button" class="button">See Project</button>
+        <div class="action">
+          <button type="button" class="button">See Project</button>
+        </div>
       </article>
       <article class="card p-16 grid-item">
         <img
@@ -186,7 +192,9 @@
           <li class="tag mr-8"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
-        <button type="button" class="button">See Project</button>
+        <div class="action">
+          <button type="button" class="button">See Project</button>
+        </div>
       </article>
     </div>
     <section class="about">
