Remove unused class attribute

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </ul>
     </section>
     <div class="works grid-container">
-      <article class="card p-16 grid-item">
+      <article class="card">
         <img
           src="images/snapshots/1.svg"
           alt="Tonic Snapshot"
@@ -103,7 +103,7 @@
           <button type="button" class="button">See Project</button>
         </div>
       </article>
-      <article class="card p-16 grid-item">
+      <article class="card">
         <img
           src="images/snapshots/2.svg"
           alt="Tonic Snapshot"
@@ -134,7 +134,7 @@
           <button type="button" class="button">See Project</button>
         </div>
       </article>
-      <article class="card p-16 grid-item">
+      <article class="card">
         <img
           src="images/snapshots/3.svg"
           alt="Tonic Snapshot"
@@ -165,7 +165,7 @@
           <button type="button" class="button">See Project</button>
         </div>
       </article>
-      <article class="card p-16 grid-item">
+      <article class="card">
         <img
           src="images/snapshots/4.svg"
           alt="Tonic Snapshot"
