Change ul element to div

--- a/index.html
+++ b/index.html
@@ -79,17 +79,13 @@
           class="snapshot mb-12"
         />
         <h2 class="header-3 color-n800">Tonic</h2>
-        <ul class="frame-2">
-          <li class="caption bolder-2 color-n600">CANOPY</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">Back End Dev</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">2015</li>
-        </ul>
+        <div class="frame-2">
+          <span class="caption bolder-2 color-n600">CANOPY</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">Backend Dev</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">2015</span>
+        </div>
         <p class="body-3 color-n600 mb-12">
           A daily selection of privately personalized reads; no accounts or
           sign-ups required.
@@ -110,17 +106,13 @@
           class="snapshot mb-12"
         />
         <h2 class="header-3 color-n800">Multi-Post Stories</h2>
-        <ul class="frame-2">
-          <li class="caption bolder-2 color-n600">CANOPY</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">Back End Dev</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">2015</li>
-        </ul>
+        <div class="frame-2">
+          <span class="caption bolder-2 color-n600">CANOPY</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">Backend Dev</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">2015</span>
+        </div>
         <p class="body-3 color-n600 mb-12">
           A daily selection of privately personalized reads; no accounts or
           sign-ups required.
@@ -141,17 +133,13 @@
           class="snapshot mb-12"
         />
         <h2 class="header-3 color-n800">Tonic</h2>
-        <ul class="frame-2">
-          <li class="caption bolder-2 color-n600">CANOPY</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">Back End Dev</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">2015</li>
-        </ul>
+        <div class="frame-2">
+          <span class="caption bolder-2 color-n600">CANOPY</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">Backend Dev</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">2015</span>
+        </div>
         <p class="body-3 color-n600 mb-12">
           A daily selection of privately personalized reads; no accounts or
           sign-ups required.
@@ -172,17 +160,13 @@
           class="snapshot mb-12"
         />
         <h2 class="header-3 color-n800">Multi-Post Stories</h2>
-        <ul class="frame-2">
-          <li class="caption bolder-2 color-n600">CANOPY</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">Back End Dev</li>
-          <li>
-            <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
-          </li>
-          <li class="caption bolder-2 color-n100">2015</li>
-        </ul>
+        <div class="frame-2">
+          <span class="caption bolder-2 color-n600">CANOPY</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">Backend Dev</span>
+          <img src="images/icons/dot.svg" alt="Separator" class="mx-12" />
+          <span class="caption bolder-2 color-n100">2015</span>
+        </div>
         <p class="body-3 color-n600 mb-12">
           A daily selection of privately personalized reads; no accounts or
           sign-ups required.
