Remove redundant classes

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           sign-ups required.
         </p>
         <ul class="tags">
-          <li class="tag mr-8"><span class="small color-b400">html</span></li>
-          <li class="tag mr-8"><span class="small color-b400">css</span></li>
+          <li class="tag"><span class="small color-b400">html</span></li>
+          <li class="tag"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
         <div class="action">
@@ -118,8 +118,8 @@
           sign-ups required.
         </p>
         <ul class="tags">
-          <li class="tag mr-8"><span class="small color-b400">html</span></li>
-          <li class="tag mr-8"><span class="small color-b400">css</span></li>
+          <li class="tag"><span class="small color-b400">html</span></li>
+          <li class="tag"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
         <div class="action">
@@ -145,8 +145,8 @@
           sign-ups required.
         </p>
         <ul class="tags">
-          <li class="tag mr-8"><span class="small color-b400">html</span></li>
-          <li class="tag mr-8"><span class="small color-b400">css</span></li>
+          <li class="tag"><span class="small color-b400">html</span></li>
+          <li class="tag"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
         <div class="action">
@@ -172,8 +172,8 @@
           sign-ups required.
         </p>
         <ul class="tags">
-          <li class="tag mr-8"><span class="small color-b400">html</span></li>
-          <li class="tag mr-8"><span class="small color-b400">css</span></li>
+          <li class="tag"><span class="small color-b400">html</span></li>
+          <li class="tag"><span class="small color-b400">css</span></li>
           <li class="tag"><span class="small color-b400">JavaScript</span></li>
         </ul>
         <div class="action">
