Add contact form

--- a/index.html
+++ b/index.html
@@ -270,5 +270,25 @@
         </li>
       </ul>
     </section>
+    <section>
+      <h2>Contact me</h2>
+      <p>
+        If you have an application you are interested in developing, a feature
+        that you need built or a project that needs coding. I’d love to help
+        with it
+      </p>
+      <form action="/contact-me" method="post">
+        <input type="text" id="name" name="user_name" placeholder="Name" />
+        <input type="email" id="email" name="email" placeholder="Email" />
+        <textarea
+          name="user_message"
+          id="message"
+          placeholder="Write your message here..."
+          cols="30"
+          rows="10"
+        ></textarea>
+        <button type="submit">Get In Touch</button>
+      </form>
+    </section>
   </body>
 </html>
