Style contact form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Poppins:regular,bold,500&display=swap"
+      href="https://fonts.googleapis.com/css?family=Poppins:regular,bold,400,500&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -270,9 +270,9 @@
         </li>
       </ul>
     </section>
-    <section>
-      <h2>Contact me</h2>
-      <p>
+    <section class="contact-me">
+      <h2 class="header-2 color-n0 center-text mb-12">Contact me</h2>
+      <p class="body-4 center-text color-b50">
         If you have an application you are interested in developing, a feature
         that you need built or a project that needs coding. I’d love to help
         with it
