Style form background

--- a/index.html
+++ b/index.html
@@ -271,24 +271,26 @@
       </ul>
     </section>
     <section class="contact-me">
-      <h2 class="header-2 color-n0 center-text mb-12">Contact me</h2>
-      <p class="body-4 center-text color-b50">
-        If you have an application you are interested in developing, a feature
-        that you need built or a project that needs coding. I’d love to help
-        with it
-      </p>
-      <form action="/contact-me" method="post">
-        <input type="text" id="name" name="user_name" placeholder="Name" />
-        <input type="email" id="email" name="email" placeholder="Email" />
-        <textarea
-          name="user_message"
-          id="message"
-          placeholder="Write your message here..."
-          cols="30"
-          rows="10"
-        ></textarea>
-        <button type="submit">Get In Touch</button>
-      </form>
+      <div class="form-background">
+        <h2 class="header-2 color-n0 center-text mb-12">Contact me</h2>
+        <p class="body-4 center-text color-b50">
+          If you have an application you are interested in developing, a feature
+          that you need built or a project that needs coding. I’d love to help
+          with it
+        </p>
+        <form action="/contact-me" method="post">
+          <input type="text" id="name" name="user_name" placeholder="Name" />
+          <input type="email" id="email" name="email" placeholder="Email" />
+          <textarea
+            name="user_message"
+            id="message"
+            placeholder="Write your message here..."
+            cols="30"
+            rows="10"
+          ></textarea>
+          <button type="submit">Get In Touch</button>
+        </form>
+      </div>
     </section>
   </body>
 </html>
